fix image on mobile layout

--- a/faq-accordion-card-main/index.css
+++ b/faq-accordion-card-main/index.css
@@ -38,12 +38,12 @@
     .boxImgMobile {
         margin-left: 45px;
         margin-top: -114px;
-        position: fixed;
+        /* position: fixed; */
         width: 250px;
     }
 
     .questionList {
-        margin-top: 40%;
+        margin-top: 10%;
         margin-bottom: 12%;
         display: flex;
         flex-direction: column;
